--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile "org.hibernate:hibernate-core:5.1.5.Final"
     compile "org.grails.plugins:gsp"
     console "org.grails:grails-console"
+	compile 'com.github.jsimone:webapp-runner:8.5.11.3'
     profile "org.grails.profiles:web"
     runtime "org.glassfish.web:el-impl:2.1.2-b03"
     runtime "com.h2database:h2"
@@ -58,6 +59,20 @@ dependencies {
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
 }
+
+task stage(){
+	dependsOn clean, war
+}
+war.mustRunAfter clean
+
+task copyToLib(type: Copy){
+	into "$buildDir/server"
+	from(configurations.compile){
+		include "webapp-runner*"
+	}
+}
+
+stage.dependsOn(copyToLib)
 
 bootRun {
     jvmArgs('-Dspring.output.ansi.enabled=always')
